# HPMSRuntime

./: .gitignore  CMakeLists.txt  README.md  Shared.cmake
data/: HPMS.ini
data/maps/: Basement.hrdat  R_1.hfdat.raw
data/models/: 01.hmdat  Dummy_Anim.hmdat  _01.hmdat  __01.hmdat
data/scripts/: Test.lua
data/scripts/bundles/: Objects.lua
data/scripts/inst/: GameConst.lua
data/scripts/inst/charas/: Player.lua
data/scripts/inst/collectibles/: DefaultActions.lua  DummyWeapon.lua
data/scripts/libs/: AbstractObject.lua  AnimGameItem.lua  AnimUtil.lua  Categories.lua  CollectibleObject.lua  CollisionAnimGameItem.lua  CollisionGameItem.lua  Context.lua  GameItem.lua  HPMSFacade.lua  InputCommon.lua  Stats.lua  TransformsCommon.lua  Utils.lua  Workflow.lua
data/scripts/luatest/: Libtest.lua
data/shaders/: Scene.vert
include/: GameState.h
include/input/: KeyEvent.h
include/logic/: CalcUtils.h  LogicItemsCache.h  RoomModelItem.h  SectorUtils.h
include/logic/controllers/: Animator.h  Collisor.h  Controller.h
include/logic/items/: Collisor.h  WalkMap.h
include/states/: GameState.h  HPMSLogic.h  R25DGameState.h
include/vm/: LuaExtensions.h  LuaRegister.h  LuaVM.h
src/: HPMSRuntimeMain.cpp  Main.cpp
src/logic/: CalcUtils.cpp  LogicItemsCache.cpp  SectorUtils.cpp
src/logic/controllers/: Animator.cpp  Collisor.cpp
src/logic/items/: Collisor.cpp
